2014-10-08 : Date of late submissions indicated in red
2014-10-08 : Plagiarism plugin now uses the hidden until date from gradebook as the post date on Turnitin.
2014-10-08 : PP Post date in Turnitin is now stored in Moodle.
2014-10-08 : Connection test added to cron event handler.
2014-10-08 : Unnecessary Gradebook update removed when viewing Turnitin Assignment.
2014-10-08 : Specify assign when looking for user's grades in PP (Thanks to mattgibson).
2014-10-08 : Details for a non moodle user who is only in expired classes can be retrieved when grabbing submission data.
2014-10-08 : Logger class renamed in SDK.
2014-10-08 : Gradelib file included in cron.
2014-10-08 : Scope of tool tipster anti-aliasing fixed to not affect whole of Moodle.
2014-09-22 : EULA notice removed from PP submissions with previous submissions.
2014-09-22 : Rubrics now being saved in PP.
2014-09-22 : EULA no longer blocked by popups in Turnitin Assignment.
2014-09-22 : EULA & Disclosure no longer being shown if PP is disabled for module (Thanks to Dan Marsden).
2014-09-04 : Anonymous marking no longer set if not enabled in settings (Thanks to Dan Marsden)
2014-09-04 : Date handling reconfigured in PP to prevent erros (Thanks to Dan Marsden)
2014-09-04 : Inbox links fixed when refreshing non moodle users submissions in Turnitin Assignment
2014-09-04 : Course migration error fixed when no Turnitin courses exist
2014-09-04 : Course migration bug no longer tries to populate PP array in migration if PP not installed
2014-09-04 : File errors page no longer errors if file has been deleted. (Thanks to Ruslin Kabalin)
2014-09-04 : Remove Grademark settings if GradeMark is disabled. (Thanks to Alex Rowe)
2014-08-19 : Turnitin Paper Id now shown next to submission to show that paper has been submitted in PP.
2014-08-19 : Cron in PP changed to check for scores when ORcapable is 1.
2014-08-19 : Course Migration query fixed when creating class. 