@@ -15,6 +15,7 @@ Release:    v2014012409
 - Connection test added to cron event handler.
 - Unnecessary Gradebook update removed when viewing Turnitin Assignment.
 - Specify assign when looking for user's grades in PP (Thanks to mattgibson).
+- PHP end tags removed to fit with moodle guidelines
 - Fixes:
 	> Details for a non moodle user who is only in expired classes can be retrieved when grabbing submission data.
 	> Logger class renamed in SDK.
